--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-
+<link rel="shortcut icon" href="assets/images/avatar.jpg" type="image/x-icon">
 
 <head>
     <!-- META DATA -->
